# typeberry-native

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  rolldown.config.js  tsconfig.json
.github/scripts/: bump-version.mjs
.github/workflows/: ci.yml  draft-release.yml  publish.yml  release.yml  rust.yml
bandersnatch/: .gitignore  Cargo.toml  build-native.sh  package.json  tsconfig.json
bandersnatch/core/: Cargo.toml
bandersnatch/core/src/: lib.rs  test.rs
bandersnatch/native-binding/: Cargo.toml
bandersnatch/native-binding/src/: lib.rs
bandersnatch/npm/darwin-arm64/: package.json
bandersnatch/npm/linux-x64-gnu/: package.json
bandersnatch/npm/native/: index.d.ts  index.js  index.mjs  package.json
bandersnatch/pkg/: bandersnatch.d.ts  bandersnatch.js  bandersnatch_bg.js  bandersnatch_bg.wasm  bandersnatch_bg.wasm.d.ts  package.json
bandersnatch/src/: env.d.ts  index.ts  lib.rs  main.rs  native.ts  test.rs
bandersnatch/wasm-binding/: Cargo.toml
bandersnatch/wasm-binding/src/: lib.rs
ed25519/: .gitignore  Cargo.toml  README.md  package.json
ed25519/pkg/: ed25519_wasm_bg.js  package.json
ed25519/src/: lib.rs  main.rs  test.rs
native/: env.d.ts  index.ts  package.json  tsconfig.json
pkg/: bandersnatch_wasm.d.ts  bandersnatch_wasm.js  bandersnatch_wasm_bg.js  bandersnatch_wasm_bg.wasm  bandersnatch_wasm_bg.wasm.d.ts  ed25519_wasm.d.ts  ed25519_wasm.js  ed25519_wasm_bg.wasm  ed25519_wasm_bg.wasm.d.ts  package.json  reed_solomon_wasm.d.ts  reed_solomon_wasm.js  reed_solomon_wasm_bg.wasm  reed_solomon_wasm_bg.wasm.d.ts
reed-solomon/: Cargo.toml  package.json
reed-solomon/.github/workflows/: rust.yml
reed-solomon/pkg/: reed_solomon_wasm.js  reed_solomon_wasm_bg.js  reed_solomon_wasm_bg.wasm
reed-solomon/src/: lib.rs
src/: lib.rs  main.rs
www/: index.html  index.js  package-lock.json  package.json
