[package]
name = "bandersnatch-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-vrfs = { git = "https://github.com/davxy/ark-ec-vrfs.git" , default-features = false, features = ["bandersnatch", "ring"], rev = "e868d1281d936716b84eb133960ecd51ff1e6633" }
ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }

web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"

[patch."https://github.com/davxy/ring-proof"]
ring-proof = { package = "ring", git = "https://www.github.com/davxy/ring-proof.git", rev = "ed97adf50c0fcac04b2e66b4069166f1cca742c3" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
