[package]
name = "bandersnatch-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec-vrfs = { git = "https://github.com/davxy/ark-ec-vrfs.git" , default-features = false, features = ["bandersnatch", "ring"], rev = "d90e180" }
hex = "0.4.3"

web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
#
#
#
# [patch."https://github.com/davxy/ring-proof"]
# ring-proof = { package = "ring", git = "https://www.github.com/davxy/ring-proof.git", rev = "db13482" }
#
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
