[package]
name = "bandersnatch"
version = "0.2.0"
edition = "2024"

[dependencies]
ark-vrf = { version = "0.1.1", features = [
    "bandersnatch",
    "ring",
] }
hex = "0.4.3"

web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
