[package]
name = "bandersnatch-wasm"
version = "0.3.0"
edition = "2024"

[dependencies]
bandersnatch-core = { path = "../core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
